--- a/Week 5 Assignment/Design1.HTML
+++ b/Week 5 Assignment/Design1.HTML
@@ -34,7 +34,8 @@
           </div>
           <figure style="background-image: url(./img/TI.jpg);">
           </figure>
-          <div>
+            <div>
+            </div>
       </main>
 </body>
 </html>
