--- a/Week 5 Assignment/Design1.HTML
+++ b/Week 5 Assignment/Design1.HTML
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dota</title>
-    <link rel="Stylesheet" href="/Week 5 Assignment/CSS/Design1.css">
+    <link rel="Stylesheet" href="./CSS/Design1.css">
 </head>
 <body>
     <main>
