--- a/Week 5 Assignment/Design4.html
+++ b/Week 5 Assignment/Design4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Now</title>
+    <title>Our Sponsor</title>
     <link rel="stylesheet" href="./CSS/Design4.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
